# ltseq

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  INDEX_PHASE8_ANALYSIS.txt  LICENSE  PHASE8_ANALYSIS.txt  README.md  api-gap-plan.md  build.rs  plan.md  pyproject.toml  pyrightconfig.json  session-ses_3627.md  session-ses_367c.md  session-ses_466a.md  tasks.md  test_filter.py  test_filter_code.py  test_filter_debug.py  test_group_filter.csv  test_showcase.py
.claude/: implementation_plan.md
.github/workflows/: ci.yml
.opencode/blog/: ltseq_source_story.md
.opencode/blog/engineering/: 00-ltseq-overview.md  01-ltseq-problem-first.md  02-lambda-to-plan.md  03-sorting-first-class.md  04-window-functions.md  05-ordered-grouping.md  06-group-derive-sql.md  07-linkedtable-lazy-join.md  08-lookup-rewrite.md  09-join-family.md  10-partition-vs-grouping.md  11-set-ops.md  12-streaming-cursor.md  13-fallback-strategy.md  14-performance-story.md  plan.md
.opencode/plan/: align-implementation.md
.opencode/plans/: clickbench-performance-plan.md  improvement-plan.md  phase4-optimization.md  phase4b-review-fixes.md
benchmarks/: CLICKBENCH_MAPPING.md  README.md  bench_core.py  bench_cudf_ops.py  bench_gpu.py  bench_ordered_gpu.py  bench_pandas_bypass.py  bench_timeseries.py  bench_vs.py  benchmark-detail.md  click-bench-plan.md  clickbench_results.json  gpu_results.json  pandas_bypass_results.json  prepare_data.py  results.json  run_all.py  timeseries_results.json  verify_parquet_order.py
benchmarks/autoresearch/: __init__.py  analyzer.py  hypothesis.py  profiler.py  report.py  runner.py  tracker.py
benchmarks/autoresearch/pilot/: README.md  __init__.py  common.py  common.sh  issues.tsv  program-perf.md  results.tsv
benchmarks/data/: hits_sample.parquet
cpp/: CMakeLists.txt
cpp/include/: arrow_c_abi.h  cudf_engine.h
cpp/src/: cudf_engine.cpp  cudf_engine_stub.c  substrait_planner.cpp  substrait_planner.hpp
data/: sample.csv
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: API_EXTENSIONS.md  ARCHITECTURE.cn.md  ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_AUTORESEARCH.md  DESIGN_SUMMARY.cn.md  DESIGN_SUMMARY.md  LINKING_GUIDE.cn.md  LINKING_GUIDE.md  MODULE_GUIDE.cn.md  MODULE_GUIDE.md  PANDAS_MIGRATION_ROADMAP.md  PHASE_A_COMPLETE.md  PHASE_A_NEXT_STEPS.md  PHASE_B_DECISIONS.md  README.md  README_PHASE8.md  ROADMAP.md  USER_MODEL.cn.md  USER_MODEL.md  api-impl-plan-2.md  api.cn.md  api.md  api_plan.md  comments-to-datafusion-libcudf-design.md  datafusion-libcudf-design-en.md  datafusion-libcudf-design.md  gpu2.md  milestones.md  phase11_design_decisions.md  phase12_documentation_plan.md  phase13_aggregate_design.md  phase3-plan.md  phase5_relational_ops.md  phase6_design_decisions.md  phase6_sequence_operators.md  phase6_session_summary.md  phase8_enhancement_analysis.md  phase8_implementation_checklist.md  phase8_implementation_patterns.md  (+9 more)
docs/superpowers/plans/: 2026-04-05-pyi-stubs.md
docs/superpowers/specs/: 2026-04-05-pyi-stubs-design.md  2026-07-07-window-over-unification-design.md
examples/: StockRecords.csv  categories.csv  country.csv  country.py  countrylanguage.csv  linking_advanced.py  linking_basic.py  linking_composite_keys.py  linking_filtering.py  linking_join_types.py  milestone2.py  orders.csv  products.csv  standalone_filter.py  standalone_filter_code.py  stock.py  stock_consecutive_up.py  test_groups.csv  users.csv
py-ltseq/ltseq/: __init__.py  __init__.pyi  _typing.py  advanced_ops.py  aggregation.py  aggregation.pyi  core.py  cursor.py  cursor.pyi  exceptions.py  exceptions.pyi  expr.py  gpu_table.py  grouping.py  helpers.py  io_ops.py  joins.py  linking.py  linking.pyi  lookup.py  ltseq_core.pyi  mutation_mixin.py  partitioning.py  partitioning.pyi  transforms.py  utils.py
py-ltseq/ltseq/expr/: __init__.py  __init__.pyi  accessors.py  accessors.pyi  base.py  base.pyi  core_types.py  core_types.pyi  cudf_eval.py  lookup_expr.py  lookup_expr.pyi  proxy.py  proxy.pyi  transforms.py  types.py  types.pyi
py-ltseq/ltseq/grouping/: __init__.py  expr.py  nested_table.py  nested_table.pyi  proxies.py  sql_parsing.py
py-ltseq/tests/: test_agg.py  test_agg_multikey.py  test_align.py  test_asof_by.py  test_asof_join.py  test_autoresearch_report.py  test_autoresearch_runner.py  test_bench_vs_summary.py  test_benchmark_autoresearch_controller.py  test_benchmark_autoresearch_pilot.py  test_conditional_aggs.py  test_constructors.py  test_core_api.py  test_csv_io.py  test_deprecated_removed.py  test_derive.py  test_derive_overwrite.py  test_dx_infra.py  test_expr.py  test_expr_optimization.py  test_filter.py  test_filter_debug.py  test_fold.py  test_gpu.py  test_gpu_operator_activation.py  test_gpu_ops.py  test_group_agg_extended.py  test_group_by.py  test_group_ordered.py  test_group_property_style.py  test_group_sorted.py  test_group_window_native.py  test_has_header.py  test_integration.py  test_join.py  test_join_merge.py  test_join_sorted.py  test_join_usability.py  test_linking_aggregate.py  test_linking_basic.py  (+64 more)
py-ltseq/tests/test_data/: events.csv  orders.csv  (+7 more)
py-ltseq/typecheck/: smoke_public_api.py
py-ltseq/typecheck_tests/: smoke_test_helpers.py
scripts/: build-cpu.sh  build-gpu.sh
src/: cursor.rs  engine.rs  error.rs  format.rs  helpers.rs  lib.rs  metadata.rs  transpiler.rs  types.rs
src/gpu/: adjacent_distinct.rs  aggregate_exec.rs  asof_join_gpu.rs  buffer_pool.rs  buffers.rs  codegen.rs  context.rs  exec_node.rs  ffi.rs  filter_exec.rs  fused_exec.rs  fused_filter.rs  hash_join.rs  hash_ops.rs  merge_join.rs  mod.rs  optimizer.rs  ordered_ops.rs  planner.rs  projection_exec.rs  raw_exec.rs  sort_aware.rs  sort_exec.rs  substrait.rs  window_ops.rs
src/ops/: advanced.rs  aggregation.rs  align.rs  arrow_shift.rs  asof_join.rs  basic.rs  common.rs  derive.rs  derive_sql.rs  display.rs  group_window.rs  grouping.rs  helpers.rs  io.rs  join.rs  linear_scan.rs  mod.rs  mutation.rs  parallel_scan.rs  pattern_match.rs  pivot.rs  set_ops.rs  sort.rs  window.rs
src/transpiler/: mod.rs  optimization.rs  sql_gen.rs  window_native.rs
(+25 files in other folders)
