[package]
name = "ltseq_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ltseq_core"
crate-type = ["cdylib"]

[dependencies]
# Python co-op
pyo3 = { version = "0.27.2", features = ["extension-module", "macros"] }

datafusion = "52.1.0"

# async executor utilities
futures-util = "0.3"

# Parallel iteration for sequence engine
rayon = "1.10"

# Direct Parquet reading (must match datafusion's arrow version)
parquet = { version = "57.1", default-features = false, features = ["arrow"] }

tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }

# GPU acceleration (optional, behind "gpu" feature)
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
pollster = { version = "0.4", optional = true }

[features]
gpu = ["wgpu", "bytemuck", "pollster"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
