[package]
name = "ltseq_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ltseq_core"
crate-type = ["cdylib"]

[dependencies]
# Python co-op
pyo3 = { version = "0.27.2", features = ["extension-module", "macros"] }

datafusion = "53"

# async executor utilities
futures-util = "0.3"

# Parallel iteration for sequence engine
rayon = "1.10"

# Direct Parquet reading (must match datafusion's arrow version)
parquet = { version = "58.1", default-features = false, features = ["arrow"] }

tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

# Profile for flamegraph generation (retains debug symbols)
# Build with: maturin develop --profile flamegraph
# Provides readable Rust function names in py-spy/perf flamegraphs.
[profile.flamegraph]
inherits = "release"
debug = true
strip = "none"
